--- a/developing_organizingcommittee.html
+++ b/developing_organizingcommittee.html
@@ -1842,7 +1842,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="http://kddlab.di.uoa.gr/dg.html" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500" src="images/oc/DimitriosGunopulos.jpg" alt="Dimitrios Gunopulos" />
+                                                            <img width="500" height="500" src="images/oc/Dimitrios Gunopulos.jpg" alt="Dimitrios Gunopulos" />
                                                         </div>
                                                     </a>
                                                     
@@ -1860,7 +1860,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="https://people.cs.vt.edu/ctlu/" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500" src="images/oc/ctlu.jpg" alt="Chang-Tien Lu" class="wp-image-633" />
+                                                            <img width="500" height="500" src="images/oc/Chang-Tien Lu.jpg" alt="Chang-Tien Lu" class="wp-image-633" />
                                                         </div>
                                                     </a>
                                                     
