--- a/developing_organizingcommittee.html
+++ b/developing_organizingcommittee.html
@@ -1895,7 +1895,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="https://www-users.cse.umn.edu/~shekhar/" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width=100% height=100% src="images/oc/Shashi Shekhar.jpg" alt="Dimitrios Gunopulos" />
+                                                            <img width="500" height="500" src="images/oc/Shashi Shekhar.jpg" alt="Dimitrios Gunopulos" />
                                                         </div>
                                                     </a>                                                  
                                                     <div class="et_pb_team_member_description">
@@ -1913,7 +1913,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="https://www.cs.umb.edu/~ding/" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width=100% height=100% src="images/oc/wei ding.jpg" alt="Chang-Tien Lu" class="wp-image-633" />
+                                                            <img width="500" height="500" src="images/oc/wei ding.jpg" alt="Chang-Tien Lu" class="wp-image-633" />
                                                         </div>
                                                     </a>
                                                     
