--- a/developing_organizingcommittee.html
+++ b/developing_organizingcommittee.html
@@ -1836,7 +1836,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
                                     
-                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: center;">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
@@ -1940,7 +1940,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
