--- a/developing_organizingcommittee.html
+++ b/developing_organizingcommittee.html
@@ -2554,14 +2554,14 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
-                                                    <a href="https://www.researchgate.net/profile/Ke-Li-64" target="_blank">
+                                                    <a href="https://colalab.ai/" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
                                                             <img width="500" height="500" src="images/oc/Ke Li.jpg" alt="Chang-Tien Lu" class="wp-image-633" />
                                                         </div>
                                                     </a>
                                                     
                                                     <div class="et_pb_team_member_description">
-                                                        <h4 class="et_pb_module_header"><a href="https://www.researchgate.net/profile/Ke-Li-64" target="_blank">Ke Li</a></h4>
+                                                        <h4 class="et_pb_module_header"><a href="https://colalab.ai/" target="_blank">Ke Li</a></h4>
                                                         <div>
                                                             <p>University of Exeter</p>
                                                         </div>
