--- a/developing_organizingcommittee.html
+++ b/developing_organizingcommittee.html
@@ -2061,6 +2061,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
                                     </div>
+
                                     <!-- Workshop Chairs -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_4">
@@ -2073,7 +2074,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
@@ -2169,7 +2170,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
@@ -2265,7 +2266,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
@@ -2454,7 +2455,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
@@ -3065,7 +3066,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             </div>
                                         </div>
 
-                                        <div class="et_pb_row et_pb_row_1">
+                                        <div class="et_pb_row et_pb_row_1" style="display: flex; justify-content: center; align-items: start;">
                                             <div
                                                 class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
                                                 <div
