--- a/cfw_developing.html
+++ b/cfw_developing.html
@@ -1500,9 +1500,10 @@
                                 class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Calls</a>
                                 <ul class="sub-menu">
-                                    <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cfp.html">Call for Papers</a>
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="cfp_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Call for Papers
+                                        </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="cfp_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
