--- a/cfw_developing.html
+++ b/cfw_developing.html
@@ -1505,7 +1505,7 @@
                                             Call for Papers
                                         </a>
                                     </li>
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cfp_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Workshops
                                         </a>
