--- a/cfw_developing.html
+++ b/cfw_developing.html
@@ -1506,7 +1506,7 @@
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cfp_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+                                        <a href="cfw_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Workshops
                                         </a>
                                     </li>
