--- a/cfw_developing.html
+++ b/cfw_developing.html
@@ -1501,12 +1501,12 @@
                                 <a href="index.html" aria-current="page">Calls</a>
                                 <ul class="sub-menu">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="cfp_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+                                        <a href="cfp.html" style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Papers
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cfw_developing.html.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+                                        <a href="cfw_developing.html" style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Workshops
                                         </a>
                                     </li>
