--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3227,7 +3227,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                         </div>
                                     </div>
 
-                                    <!-- Honorary Conference Chair -->
+                                    <!-- Steering Committee Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_2">
                                             <div
@@ -3237,7 +3237,7 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                                     class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
 
                                                     <div class="et_pb_text_inner">
-                                                        <h2 style="text-align: center;">Honorary Conference Chair</h2>
+                                                        <h2 style="text-align: center;">Steering Committee Chair</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -3248,16 +3248,16 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
-                                                    <a href="https://www-users.cse.umn.edu/~shekhar/" target="_blank">
+                                                    <a href="https://xwu.zhonghuapu.com/" target="_blank">
                                                         <div class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500" src="images/oc/Shashi Shekhar.jpg" alt="Dimitrios Gunopulos" />
+                                                            <img width="500" height="500" src="images/oc/xindongwu.jpg" alt="Dimitrios Gunopulos" />
                                                         </div>
                                                     </a>
                                                     
                                                     <div class="et_pb_team_member_description">
-                                                        <h4 class="et_pb_module_header"><a href="https://www-users.cse.umn.edu/~shekhar/" target="_blank">Shashi Shekhar</h4>
+                                                        <h4 class="et_pb_module_header"><a href="https://xwu.zhonghuapu.com/" target="_blank">Xindong Wu</h4>
                                                         <div>
-                                                            <p>U. of Minnesota</p></a>
+                                                            <p>Hefei University of Technology, China</p></a>
                                                         </div>
                                                     </div>
                                                 </div>
