--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1543,19 +1543,27 @@ menu-item-has-children menu-item-171"><a href="organizingcommittee.html">Organiz
 
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-512"><a
                                     href="keydates.html">Key Dates</a></li>
+
                             <li
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
-                                <a href="cfp.html">Calls</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="cfp.html">Call for Papers</a></li>
-                                    <!--	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-709"><a href="call-for-workshops/index.html">Call for Workshop Proposals</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-731"><a href="call-for-tutorials/index.html">Call for Tutorials</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-909"><a href="call-for-phdforum/index.html">Call for PhD Forum Papers</a></li>
-	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2026"><a href="calldeiaward/index.html">Call for DEI Attendance Award</a></li>
-	-->
-                                </ul>
-                            </li>
+									class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
+									<a href="index.html" aria-current="page">Calls</a>
+									<ul class="sub-menu">
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+											<a href="cfp.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+												Call for Papers
+											</a>
+										</li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+											<a href="cfw.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+												Call for Workshops
+											</a>
+										</li>
+										
+	
+									</ul>
+	
+								</li>
+                                
                             <li
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-874">
                                 <a href="index.html">Program</a>
