--- a/cfp.html
+++ b/cfp.html
@@ -1485,9 +1485,11 @@
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
 								<a href="index.html">Organization</a>
-								<ul class="sub-menu">
+								<ul class="sub-menu" style="min-width: 270px;">
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
-										<a href="organizingcommittee.html">Organizing Committee</a>
+										<a href="organizingcommittee.html"
+											style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
+											Committee</a>
 									</li>
 									<!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1631"><a href="achairs-pcommittee/index.html">Area Chairs and Program Committee</a></li>-->
 								</ul>
@@ -1499,7 +1501,7 @@
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Calls</a>
-								<ul class="sub-menu">
+								<ul class="sub-menu" style="min-width: 320px;">
 									<li
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681  current-menu-item">
 										<a href="cfp.html"
@@ -1510,7 +1512,7 @@
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="cfw.html"
 											style="display: block; min-width: 300px; padding: 10px 20px;">
-											Call for Workshops
+											Call for Workshop Proposals
 										</a>
 									</li>
 
@@ -1630,7 +1632,8 @@
 												<div class="header-content">
 
 													<h1 class="et_pb_module_header">Call for Papers (<a
-															href="files/IEEE-ICDM-2025-CFP-NEW.pdf" target="_blank">PDF</a>)
+															href="files/IEEE-ICDM-2025-CFP-NEW.pdf"
+															target="_blank">PDF</a>)
 													</h1>
 
 													<div class="et_pb_header_content_wrapper"></div>
