--- a/cfw.html
+++ b/cfw.html
@@ -1485,9 +1485,11 @@
                             <li
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
                                 <a href="index.html">Organization</a>
-                                <ul class="sub-menu">
+                                <ul class="sub-menu" style="min-width: 270px;">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
-                                        <a href="organizingcommittee.html">Organizing Committee</a>
+                                        <a href="organizingcommittee.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
+                                            Committee</a>
                                     </li>
                                     <!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1631"><a href="achairs-pcommittee/index.html">Area Chairs and Program Committee</a></li>-->
                                 </ul>
@@ -1499,18 +1501,21 @@
                             <li
                                 class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Calls</a>
-                                <ul class="sub-menu">
+                                <ul class="sub-menu" style="min-width: 320px;">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="cfp.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+                                        <a href="cfp.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Papers
                                         </a>
                                     </li>
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
-                                        <a href="cfw.html" style="display: block; min-width: 300px; padding: 10px 20px;">
-                                            Call for Workshops
+                                    <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="cfw.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Call for Workshop Proposals
                                         </a>
                                     </li>
-                                    
+
 
                                 </ul>
 
@@ -1626,7 +1631,7 @@
                                             <div class="header-content-container center">
                                                 <div class="header-content">
 
-                                                    <h1 class="et_pb_module_header">Call for Workshops</h1>
+                                                    <h1 class="et_pb_module_header">Call for Workshop Proposals</h1>
 
                                                     <div class="et_pb_header_content_wrapper"></div>
 
@@ -1665,7 +1670,7 @@
                                                         field. Ideally a workshop should foster interactions
                                                         between different communities within the scope of ICDM. Accepted
                                                         workshops are expected to be held on November
-                                                        12-15, 2025. These workshops provide a more focused, in-depth
+                                                        12, 2025. These workshops provide a more focused, in-depth
                                                         venue for presentations, discussions and interaction.
                                                         Each workshop will solicit papers (max 8 pages plus 2 extra
                                                         pages) for peer review. Furthermore, as in previous
@@ -1734,30 +1739,29 @@
                                                         <li>April 11, 2025: Workshop proposals notification</li>
                                                         <li>September 1, 2025: Workshop paper submission deadline </li>
                                                         <li>(TBD): Workshop paper notification deadline </li>
-                                                        <li>November 11, 2025: Workshops date (tentative)</li>
+                                                        <li>November 12, 2025: Workshops date (tentative)</li>
                                                     </ul>
 
                                                     <h4><strong>Submission</strong></h4>
 
                                                     <p>
-                                                        Please submit a pdf to Microsoft Conference Management Toolkit
-                                                        (CMT) through the following submission link:
+                                                        Workshop proposals should be submitted in PDF, by email to
+                                                        <a
+                                                            href="mailto:icdm25workshopchairs@gmail.com">icdm25workshopchairs@gmail.com</a>
+                                                        (subject: "IEEE
+                                                        ICDM 2025 Workshop proposal")。
                                                     </p>
 
-                                                    <p>(will be available soon). </p>
-
-                                                    <p>Note: Microsoft CMT service was used for managing the
-                                                        peer-reviewing process for this conference. This service was
-                                                        provided for free by Microsoft and they bore all expenses,
-                                                        including costs for Azure cloud services as well as for software
-                                                        development and support.</p>
 
                                                     <br>
                                                     <h4><strong>Workshops Chairs</strong></h4>
 
-                                                    <span>Li Zhang (li.zhang@utrgv.edu)</span><br>
-                                                    <span>Zhe Jiang (zhe.jiang@ufl.edu)</span><br>
-                                                    <span>Ranga Raju Vatsavai (rrvatsav@ncsu.edu)</span>
+                                                    <span>Li Zhang (<a
+                                                            href="mailto:li.zhang@utrgv.edu">li.zhang@utrgv.edu</a>)</span><br>
+                                                    <span>Zhe Jiang (<a
+                                                            href="mailto:zhe.jiang@ufl.edu">zhe.jiang@ufl.edu</a>)</span><br>
+                                                    <span>Ranga Raju Vatsavai (<a
+                                                            href="mailto:rrvatsav@ncsu.edu">rrvatsav@ncsu.edu</a>)</span>
 
 
                                                 </div>
