--- a/keydates.html
+++ b/keydates.html
@@ -1485,32 +1485,38 @@
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
 								<a href="index.html">Organization</a>
-								<ul class="sub-menu">
+								<ul class="sub-menu" style="min-width: 270px;">
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
-										<a href="organizingcommittee.html">Organizing Committee</a></li>
+										<a href="organizingcommittee.html"
+											style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
+											Committee</a>
+									</li>
 									<!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1631"><a href="achairs-pcommittee/index.html">Area Chairs and Program Committee</a></li>-->
 								</ul>
 							</li>
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-512 current_page_item">
-								<a href="keydates.html">Key Dates</a></li>
+								<a href="keydates.html">Key Dates</a>
+							</li>
 
 
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Calls</a>
-								<ul class="sub-menu">
+								<ul class="sub-menu" style="min-width: 320px;">
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-										<a href="cfp.html" style="display: block; min-width: 300px; padding: 10px 20px;">
+										<a href="cfp.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
 											Call for Papers
 										</a>
 									</li>
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-										<a href="cfw.html" style="display: block; min-width: 300px; padding: 10px 20px;">
-											Call for Workshops
+										<a href="cfw.html"
+											style="display: block; min-width: 300px; padding: 10px 20px;">
+											Call for Workshop Proposals
 										</a>
 									</li>
-									
+
 
 								</ul>
 
