--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3480,6 +3480,52 @@
                                         </div>
                                     </div>
 
+                                    <!-- BlueSky Track Co-chair -->
+                                    <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
+                                        <div class="et_pb_row et_pb_row_2">
+                                            <div
+                                                class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
+
+                                                <div
+                                                    class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
+
+                                                    <div class="et_pb_text_inner">
+                                                        <h2 style="text-align: center;">BlueSky Track Co-chair</h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="et_pb_row et_pb_row_1"
+                                            style="display: flex; justify-content: center; align-items: center;">
+                                            <div class="et_pb_column et_pb_column_1_3">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://sites.google.com/umich.edu/yujunyan/home" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Yujun Yan.jpg"
+                                                                alt="Dimitrios Gunopulos" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://sites.google.com/umich.edu/yujunyan/home"
+                                                                target="_blank">Yujun Yan</h4>
+                                                        <div>
+                                                            <p>Dartmouth College</p></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+
                                     <!-- Steering Committee Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_2">
@@ -3524,6 +3570,8 @@
 
                                         </div>
                                     </div>
+
+                                    
 
 
 
