--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -2482,39 +2482,36 @@
 
                                     <!-- Finance Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
-                                        <div class="et_pb_row et_pb_row_2">
+                                        <div class="et_pb_row et_pb_row_4">
                                             <div
-                                                class="et_pb_column et_pb_column_4_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough et-last-child">
+                                                class="et_pb_column et_pb_column_4_4 et_pb_column_5 et_pb_css_mix_blend_mode_passthrough et-last-child">
 
                                                 <div
-                                                    class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
-
+                                                    class="et_pb_module et_pb_text et_pb_text_2 et_pb_text_align_left et_pb_bg_layout_light">
                                                     <div class="et_pb_text_inner">
-                                                        <h2 style="text-align: center;">Finance Chair</h2>
+                                                        <h2 style="text-align: center;">Finance Chairs</h2>
                                                     </div>
                                                 </div>
-                                            </div>
 
+                                            </div>
                                         </div>
 
                                         <div class="et_pb_row et_pb_row_1"
-                                            style="display: flex; justify-content: center; align-items: center;">
+                                            style="display: flex; justify-content: center; align-items: start;">
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
                                                     <a href="https://xuczhang.github.io/" target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500"
-                                                                src="images/oc/Xuchao Zhang.jpg"
+                                                            <img width="500" height="500" src="images/oc/Xuchao Zhang.jpg"
                                                                 alt="Dimitrios Gunopulos" />
                                                         </div>
                                                     </a>
 
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
-                                                                href="https://xuczhang.github.io/"
-                                                                target="_blank">Xuchao Zhang</h4>
+                                                                href="https://xuczhang.github.io/" target="_blank">Xuchao Zhang</h4>
                                                         <div>
                                                             <p>Microsoft Research</p>
                                                         </div></a>
@@ -2522,9 +2519,29 @@
                                                 </div>
                                             </div>
 
+                                            <div class="et_pb_column et_pb_column_1_3">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://cs.emory.edu/~lzhao41/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500" src="images/oc/Liang Zhao.jpg"
+                                                                alt="Chang-Tien Lu" class="wp-image-633" />
+                                                        </div>
+                                                    </a>
 
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a href="https://cs.emory.edu/~lzhao41/"
+                                                                target="_blank">Liang Zhao</h4>
+                                                        <div>
+                                                            <p>Emory U.</p>
+                                                        </div></a>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
+
 
                                     <!-- Panel Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
@@ -2959,20 +2976,20 @@
                                             <div class="et_pb_column et_pb_column_1_3">
                                                 <div
                                                     class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix et_pb_text_align_center et_pb_bg_layout_light">
-                                                    <a href="https://cs.emory.edu/~lzhao41/" target="_blank">
+                                                    <a href="https://flash121123.github.io/" target="_blank">
                                                         <div
                                                             class="et_pb_team_member_image et-waypoint et_pb_animation_off">
-                                                            <img width="500" height="500" src="images/oc/Liang Zhao.jpg"
+                                                            <img width="500" height="500" src="images/oc/Yifeng Gao.png"
                                                                 alt="Dimitrios Gunopulos" />
                                                         </div>
                                                     </a>
 
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
-                                                                href="https://cs.emory.edu/~lzhao41/"
-                                                                target="_blank">Liang Zhao</h4>
+                                                                href="https://flash121123.github.io/"
+                                                                target="_blank">Yifeng Gao</h4>
                                                         <div>
-                                                            <p>Emory U.</p>
+                                                            <p>University of Texas Rio Grande Valley</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
