--- a/cfw.html
+++ b/cfw.html
@@ -12,7 +12,7 @@
         document.documentElement.className = 'js';
     </script>
 
-    <title>Call for Papers | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
+    <title>Call for Workshop Proposals | IEEE International Conference on Data Mining 2025 (ICDM2025) | IEEE ICDM 2025</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <meta name='robots' content='max-image-preview:large' />
     <script type="text/javascript">
@@ -1725,7 +1725,10 @@
                                                         workshops and encourage proposals that foster diversity,
                                                         originality, and innovation among diverse research areas and
                                                         ICDM research community. We recommend reviewing examples of
-                                                        recent ICDM workshops (e.g. ICDMW 2024, ICDMW2023, ICDMW2021) to
+                                                        recent ICDM workshops (e.g. <a href="https://icdm2024.org/workshops/"
+                                                        target="_blank">ICDMW2024</a>, <a href="https://www.cloud-conf.net/icdm2023/workshop.html"
+                                                        target="_blank">ICDMW2023</a>, <a href="https://icdm2021.auckland.ac.nz/acceptedworkshops/"
+                                                        target="_blank">ICDMW2021</a>) to
                                                         understand previous themes, and hope to inspire fresh,
                                                         innovative ideas that bring unique contributions to the ICDM
                                                         research community. </p>
