--- a/cfp.html
+++ b/cfp.html
@@ -1501,7 +1501,7 @@
 							<li
 								class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
 								<a href="index.html" aria-current="page">Calls</a>
-								<ul class="sub-menu" style="min-width: 320px;">
+								<ul class="sub-menu" style="min-width: 400px;">
 									<li
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681  current-menu-item">
 										<a href="cfp.html"
@@ -1515,6 +1515,12 @@
 											Call for Workshop Proposals
 										</a>
 									</li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cficp.html"
+                                            style="display: block; min-width: 350px; padding: 10px 20px;">
+                                            Call for ICDM Contest Proposals
+                                        </a>
+                                    </li>
 
 
 								</ul>
