--- a/cficp.html
+++ b/cficp.html
@@ -1524,6 +1524,13 @@
                                         </a>
                                     </li>
 
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
+										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
+											REU Symposium 2025
+										</a>
+									</li>
+
 
                                 </ul>
 
