--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3575,6 +3575,113 @@
                                     </div>
 
 
+                                    <!--  REU Chairs -->
+                                    <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
+                                        <div class="et_pb_row et_pb_row_4">
+                                            <div
+                                                class="et_pb_column et_pb_column_4_4 et_pb_column_5 et_pb_css_mix_blend_mode_passthrough et-last-child">
+                                                <div
+                                                    class="et_pb_module et_pb_text et_pb_text_2 et_pb_text_align_left et_pb_bg_layout_light">
+                                                    <div class="et_pb_text_inner">
+                                                        <h2 style="text-align: center;">REU Chairs</h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="et_pb_row et_pb_row_1"
+                                            style="display: flex; justify-content: center; align-items: start;">
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough">
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_0 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+                                                    <a href="https://bdal.umbc.edu/people/jianwu/" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Jianwu Wang.jpg"
+                                                                alt="Dimitrios Gunopulos" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://bdal.umbc.edu/people/jianwu/"
+                                                                target="_blank">Jianwu Wang</h4>
+
+                                                        <div>
+                                                            <p>University of Maryland, Baltimore County</p>
+                                                        </div></a>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough">
+
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+
+                                                    <a href="https://vancouver.labs.wsu.edu/xuechen-zhang/"
+                                                        target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Xuechen Zhang.jpg" alt="Chang-Tien Lu"
+                                                                class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://vancouver.labs.wsu.edu/xuechen-zhang/"
+                                                                target="_blank">Xuechen Zhang</h4>
+
+                                                        <div>
+                                                            <p>Washington State University</p>
+                                                        </div></a>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                            <div
+                                                class="et_pb_column et_pb_column_1_3 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
+
+                                                <div
+                                                    class="et_pb_module et_pb_team_member et_pb_team_member_1 et_clickable clearfix  et_pb_text_align_center et_pb_bg_layout_light">
+
+                                                    <a href="https://www.uhcl.edu/science-engineering/faculty/yang-xiaokun" target="_blank">
+                                                        <div
+                                                            class="et_pb_team_member_image et-waypoint et_pb_animation_off">
+                                                            <img width="500" height="500"
+                                                                src="images/oc/Xiaokun Yang.jpg" alt="Chang-Tien Lu"
+                                                                class="wp-image-633" />
+                                                        </div>
+                                                    </a>
+
+                                                    <div class="et_pb_team_member_description">
+                                                        <h4 class="et_pb_module_header"><a
+                                                                href="https://www.uhcl.edu/science-engineering/faculty/yang-xiaokun"
+                                                                target="_blank">Xiaokun Yang</h4>
+
+                                                        <div>
+                                                            <p>University of Houston-Clear Lake</p>
+                                                        </div></a>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+
+                                        </div>
+                                    </div>
+
+
                                     <!-- Steering Committee Chair -->
                                     <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_2">
