--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1576,6 +1576,12 @@
 										</a>
 									</li>
 
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="https://2025-icdm-ughs.github.io/"
+										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
+										   Undergraduate and High School Symposium
+										</a>
+									</li>
 
                                 </ul>
 
