--- a/index.html
+++ b/index.html
@@ -1532,6 +1532,12 @@
 										   Undergraduate and High School Symposium
 										</a>
 									</li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+										<a href="https://icdm25phd.github.io/"
+										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
+										   PhD Forum
+										</a>
+									</li>
 
 
 								</ul>
