--- a/index.html
+++ b/index.html
@@ -1514,6 +1514,23 @@
 											Call for Workshop Proposals
 										</a>
 									</li>
+
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cft.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Call for Tutorials
+                                        </a>
+                                    </li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="https://icdm25demo.github.io/ "
+                                            style="display: block; min-width: 350px; padding: 10px 20px;"
+                                            target="_blank">
+                                            Call for Demo
+                                        </a>
+                                    </li>
+
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cficp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
