--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1533,7 +1533,7 @@
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-171">
                                 <a href="index.html">Organization</a>
                                 <ul class="sub-menu" style="min-width: 270px;">
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633 current-menu-item">
                                         <a href="organizingcommittee.html"
                                             style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
                                             Committee</a>
@@ -1562,6 +1562,24 @@
                                             Call for Workshop Proposals
                                         </a>
                                     </li>
+
+                                    <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cft.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Call for Tutorials
+                                        </a>
+                                    </li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="https://icdm25demo.github.io/ "
+                                            style="display: block; min-width: 350px; padding: 10px 20px;"
+                                            target="_blank">
+                                            Call for Demo
+                                        </a>
+                                    </li>
+
+
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cficp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
