--- a/cfp.html
+++ b/cfp.html
@@ -1503,7 +1503,7 @@
 								<a href="index.html" aria-current="page">Calls</a>
 								<ul class="sub-menu" style="min-width: 400px;">
 									<li
-										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681  current-menu-item">
+										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
 										<a href="cfp.html"
 											style="display: block; min-width: 300px; padding: 10px 20px;">
 											Call for Papers
@@ -1515,6 +1515,23 @@
 											Call for Workshop Proposals
 										</a>
 									</li>
+
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cft.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Call for Tutorials
+                                        </a>
+                                    </li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="https://icdm25demo.github.io/ "
+                                            style="display: block; min-width: 350px; padding: 10px 20px;"
+                                            target="_blank">
+                                            Call for Demo
+                                        </a>
+                                    </li>
+
 									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cficp.html"
                                             style="display: block; min-width: 350px; padding: 10px 20px;">
